# lolcoin-2018

./: .gitignore  Cargo.toml  README.md  batch_transfer.py  users.json
src/: common.rs  database.rs  errors.rs  forms.rs  main.rs  server.rs
web/: package.json
web/components/: Layout.js  Loading.js  constants.js
web/pages/: index.js
web/pages/transfers/: index.js  new.js
