cargo-features = ["edition"]

[package]
name = "lolcoin"
version = "0.1.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2018"

[dependencies]
warp = "0.1.2"
failure = "0.1.2"
uuid = { version = "0.6.5", features = ["serde"] }
serde_json = "1.0.26"
serde = "1.0.71"
serde_derive = "1.0.71"
multi_mut = "0.1.3"
